kubernetes/apps/atlantis/atlantis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlantis
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: atlantis
  template:
    metadata:
      labels:
        app: atlantis
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - vm-srv-k3s-11
                - vm-srv-k3s-12
      containers:
      - name: atlantis
        image: ghcr.io/runatlantis/atlantis:v0.46.0
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 4141
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /home/atlantis
        - name: config
          mountPath: /etc/atlantis/repos.yaml
          subPath: repos.yaml
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: atlantis-data
      - name: config
        configMap:
          name: atlantis-config
      - name: tmp
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: apps
spec:
  ports:
  - port: 4141
  selector:
    app: atlantis
