kubernetes/apps/atlantis/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: atlantis
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`atlantis.woitzik.dev`)
    kind: Rule
    services: [{name: atlantis, port: 4141}]
  tls: {secretName: wildcard-woitzik-dev-tls}
